--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <!-- Video -->
           <div class="video">
             <video width="428" height="240"  controls>
-              <source src="18807922-hd_1920_1080_30fps.mp4" type="video/mp4" />
+              <source src="images/18807922-hd_1920_1080_30fps.mp4" type="video/mp4" />
             </video>
           </div>
         </div>
@@ -70,9 +70,9 @@
         <div class="social">
         <span>FOLLOW US ON</span>
         <span class="link">   
-        <img src="download (4).png" alt="image1" width="38" height="38"/>
-        <img src="download (5).png" alt="image2" width="38" height="38"/>
-        <img src="download (6).png" alt="image3" width="38" height="38"/>
+        <img src="images/download (4).png" alt="image1" width="38" height="38"/>
+        <img src="images/download (5).png" alt="image2" width="38" height="38"/>
+        <img src="images/download (6).png" alt="image3" width="38" height="38"/>
       </span>
     </span>
     </div>
